<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PGRS - CMA</string>
    
    
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    
    <string name="action_call">Call</string>
    <string name="action_message">Message</string>
    <string name="action_about">About</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_register">Add a Complaint</string>

</resources>