<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_register"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_register"/>
    <item
        android:id="@+id/action_call"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/action_call"/>
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_action_social_chat_gray"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/action_message"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_licenses"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_licenses"/>

</menu>